--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 * {
   box-sizing: border-box;
 }
-@import url("https://rsms.me/inter/inter.css");
 
 
 .ce-block__content {
   max-width: 48rem;
+}
+
+.codex-editor__loader {
+  height: 138px;
 }
