--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,12 @@
 .cdx-notify--error {
   background-color: inherit !important;
 }
+
+html,body{
+  height: 100%;
+  width: 100%;
+}
+
+#root {
+  min-height: 100%;
+}
