--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,21 @@ body {
     left: -2rem;
   }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
+* {
+  scrollbar-width: 10px;
+  scrollbar-color: darkgrey;
+}
